--- a/.github/workflows/hugo-deploy.yaml
+++ b/.github/workflows/hugo-deploy.yaml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+
     steps:
       - uses: actions/checkout@v2
 
