--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,6 +9,7 @@ colorScheme = "blowfish"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
+disableImageZoom = true
 enableSearch = true
 enableCodeCopy = true
 
