--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,9 +9,12 @@ colorScheme = "blowfish"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
-disableImageZoom = true
 enableSearch = true
 enableCodeCopy = true
+
+disableImageZoom = false
+disableImageOptimization = true
+disableImageOptimizationMD = true
 
 # mainSections = ["section1", "section2"]
 # robots = ""
